# clauselens

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/app/: __init__.py  config.py  main.py
backend/app/analysis/: comparator.py  extractor.py  risk_flagger.py
backend/app/data/: samples.py
backend/app/ingestion/: chunker.py  pdf_parser.py
backend/app/llm/: cost.py  factory.py  gemini.py  provider.py  router.py
backend/app/observability/: logger.py  metrics.py
backend/app/rag/: embeddings.py  rerank.py  retrieve.py  store.py
backend/app/routes/: analyze.py  compare.py  demo.py  evals.py  qa.py  upload.py
backend/app/schemas/: analysis.py  compare.py  documents.py  qa.py
backend/backend/app/observability/logs/: requests.jsonl
backend/static/: index.html
backend/static/assets/: index-B1DIstCt.js  index-BH01bjrg.css  index-BNTpn4se.js  index-BiGeqY_-.js  index-Bjj3ODSb.js  index-CSWlNBOD.js  index-Cch4HXP9.css  index-ChYVPuxy.css  index-Cn9SDy3R.js  index-DDF2EHuL.css  index-DddhGIKr.css  index-Df9LepkR.js  index-DhI051pj.js  index-Dlvd_hH2.js  index-Du0uzRRS.js  index-Lkp1yTS_.css  index-ZTZ8AlZd.css  index-sER_VDsr.css
backend/tests/: test_analysis.py  test_chunker.py  test_compare.py  test_cost.py  test_evals.py  test_health.py  test_pdf_parser.py  test_qa.py  test_rag.py  test_router.py
data/samples/: SOURCES.md
evals/: baseline.json  judge.py  qa_pairs.jsonl  run_evals.py
evals/results/: summary_20260604T160918.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: AnalysisPanel.tsx  ChatPanel.tsx  ComparePanel.tsx  EvalsPanel.tsx  MetricsBadge.tsx  UploadPanel.tsx  ui.tsx
