[project]
name = "clauselens"
version = "0.1.0"
description = "Production-grade AI contract analysis: RAG Q&A, clause extraction, risk flagging, and version-diff classification."
readme = "README.md"
# Deploy target (Docker / HF Space) runs 3.11. Code stays 3.9-runnable via
# `from __future__ import annotations`, so local dev works without a 3.11 install.
requires-python = ">=3.9"
license = { text = "MIT" }

# --- Core runtime: light, installs fast, 3.9-compatible. ---
# Heavy ML/RAG deps live in optional groups so the API boots (lazy imports) and
# fast unit tests run without pulling torch/faiss.
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
    "tenacity==9.0.0",          # retries + exponential backoff on API calls
    "rank-bm25==0.2.2",         # keyword arm of hybrid retrieval (pure-python)
    "pdfplumber==0.11.5",       # layout-aware PDF text + table extraction
    "numpy==2.0.2",             # 2.0.2 = last line supporting py3.9
    "google-genai==1.9.0",      # Gemini SDK (provider-agnostic wrapper sits on top)
]

[project.optional-dependencies]
# Vector index + cross-encoder reranker. Heavy (torch); installed for deploy/RAG.
rag = [
    "faiss-cpu==1.9.0.post1",
    "sentence-transformers==3.3.1",
]
# OCR fallback for scanned/garbled PDFs (requires system `tesseract` binary).
ocr = [
    "pytesseract==0.3.13",
    "pillow==11.0.0",
]
# Postgres + pgvector backend (Supabase) for the deployed VectorStore.
pg = [
    "psycopg[binary]==3.2.3",
    "pgvector==0.3.6",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
ignore_missing_imports = true   # heavy optional deps aren't always installed

[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests", "evals"]
